--- a/Index.html
+++ b/Index.html
@@ -32,6 +32,7 @@
 <h4 style="color:beige;">Entry Level Developer</h4>
 <p style="color:beige;font:size 15px;">Jane is a registered Nurse and midwife with bachelor's degree in Nursing and Master's degree in Public health from the University of Nigeria Nsukka. I have over seven years work experience as a Nurse.I am also a UK NMC registered Nurse and currently work as an Endoscopy staff Nurse in Kings College Hospital. I am currently learning how to code and i aspire to be the best i can be as a developer.
 </p>
+<h1>Hobbies</h1>
 <a href="Project form.html" style=color:white;> Visit Project form.html</a>
 
 </body>
